# rgenpass

./: .rustfmt.toml  Cargo.toml  README.md  install.bat  makefile  run.bat  uninstall.bat
.github/workflows/: rust.yml
src/: lib.rs
